syntax = "proto3";

package api.usercenter.v1;

option go_package = "fortune-bd/api/usercenter/v1;v1";
option java_multiple_files = true;
option java_package = "api.usercenter.v1";
import "google/protobuf/empty.proto";
import public "google/protobuf/timestamp.proto";

service User {
	rpc Login (LoginReq) returns (LoginResp) {}
	rpc SendValidateCode (ValidateCodeReq) returns (ValidateCodeResp) {}
	rpc Register (RegisterReq) returns (google.protobuf.Empty) {}
	rpc ResetPassword (ChangePasswordReq) returns (google.protobuf.Empty) {}
	rpc ForgetPassword (ForgetPasswordReq) returns (google.protobuf.Empty) {}
	rpc UpdateUser (UpdateUserReq) returns (google.protobuf.Empty) {}
	rpc GetUserInfo (UserInfoReq) returns (LoginResp) {}
	rpc GetMembers (google.protobuf.Empty) returns (GetMembersResp) {}
	rpc GetPaymentMethod (google.protobuf.Empty) returns (GetPaymentMethodResp) {}
	rpc GetAllUserInfo(google.protobuf.Empty) returns (AllUserInfoResp) {}
	rpc GetUserMasterByInViteUser(GetUserMasterReq) returns (UserMasterResp) {}
}

message GetUserMasterReq {
	string invite_uid =1;
}

message UserMasterResp {
	string user_master_id =1;
}

message AllUserInfoResp {
	repeated LoginResp user_info = 1;
}

message UserInfoReq {
	string user_id = 1;
}

message LoginReq {
	string phone = 1;
	string password = 2;
}

message LoginResp {
	string user_id = 1;
	string invitation_code = 2;
	string name = 3;
	string avatar = 4;
	string phone = 5;
	google.protobuf.Timestamp last_login_at = 6;
	int32 login_count = 7;
}

message ValidateCodeReq {
	string phone = 1;
}

message ValidateCodeResp {
	string code = 1;
}

message RegisterReq {
	string name = 1;
	string phone = 2;
	string password = 3;
	string confirm_password = 4;
	string invitation_code = 5;
	string validate_code = 6;
}

message ChangePasswordReq {
	string user_id = 1;
	string password = 2;
	string confirm_password = 3;
}

message ForgetPasswordReq {
	string password = 1;
	string confirm_password = 2;
	string phone = 3;
	string validate_code = 4;
}


message UpdateUserReq {
	string name = 1;
	string avatar = 2;
	string user_id = 3;
}

message Member {
	int32 id = 1;
	string name = 2;
	string remark = 3;
	int32 price = 4;
	int32 old_price = 5;
	int32 duration = 6;
	int32 state = 7;
	string created_at = 8;
	string updated_at = 9;
}

message GetMembersResp {
	repeated Member members = 1;
}

message Payment {
	int32 id = 1;
	string name = 2;
	string remark = 3;
	string bit_addr = 4;
	string bit_code = 5;
	int32 state = 6;
}

message GetPaymentMethodResp {
	repeated Payment payments =1;
}
